docs: remove WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS mention

--- a/docs/developer-docs/5.40.x/core-development-concepts/basics/environment-variables.mdx
+++ b/docs/developer-docs/5.40.x/core-development-concepts/basics/environment-variables.mdx
@@ -167,20 +167,13 @@ x-webiny-version: 5.21.0
 
 ### `WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS`
 
-To manage how long deleted entries are retained within Webiny, developers can configure the retention period using two environment variables. 
+To manage how long deleted entries are retained within Webiny, developers can configure the retention period using the `WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS` environment variable.
 
-Both variables are necessary and they should be the same:
+For example, setting `WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS=7` will preserve deleted entries for 7 days.
 
-- `WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS` dictates how long deleted entries persist.
-- `WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS` controls the feedback notice that appears in the admin.
+Adjusting this variable allows developers to customize the retention period according to their needs. 
 
-When adjusting these variables, such as setting both to 7 days, deleted entries will be preserved for the specified duration.
-
-```bash
-WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS=7
-WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS=7
-```
-For instance, setting both variables to 0 will result in the default retention period of 90 days being applied.
+Setting `WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS=0` will apply the default retention period of 90 days.
 
 ## FAQ
 
