--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -53,19 +53,18 @@ With this release, we are introducing the robust and indispensable Trash Bin fea
 
 #### Customize Retention Period
 
-To customize how long deleted entries are kept, developers can adjust two environment variables. For instance, if you want to set the retention period to 7 days, follow these steps:
+To customize how long deleted entries are kept, developers can adjust an environment variable. For instance, if you want to set the retention period to 7 days, follow these steps:
 
 1. Open the .env file.
-2. Add these lines:
+2. Add this lines:
 
 ```
 WEBINY_TRASH_BIN_RETENTION_PERIOD_DAYS=7
-WEBINY_ADMIN_TRASH_BIN_RETENTION_PERIOD_DAYS=7
 ```
 
 3. Deploy the project.
 
-If you set both variables to 0, the default retention period will be used.
+If you set the variable to 0, the default retention period (90 days) will be used.
 
 ### Support for Reference Fields in Advanced Search Filter ([#3783](https://github.com/webiny/webiny-js/pull/3783))
 
