feat: record locking

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -4,7 +4,9 @@ title: Webiny 5.40.0 Changelog
 description: April 3rd, 2024
 ---
 
-import { GithubRelease } from "@/components/GithubRelease";
+
+import {Alert} from "@/components/Alert";
+import {GithubRelease} from "@/components/GithubRelease";
 import pulumiOutputHidden from "./assets/pulumi-output-hidden.png";
 import gracefulErrorHandling from "./assets/graceful-error-handling.png";
 import refreshedWebinyInfoCommand from "./assets/refreshed-webiny-info-command.png";
@@ -14,6 +16,10 @@ import wcpBadgeInAdmin from "./assets/wcp-badge-in-admin.png";
 import hcmsAcfReferenceField from "./assets/hcms-acf-reference-field.png";
 import hcmsTrashBinOverview from "./assets/hcms-trash-bin-overview.gif";
 import pbDuplicatePage from "./assets/pb-duplicate-page.png";
+import lockedScreen1 from "./assets/locked-1.png";
+import lockedScreen2 from "./assets/locked-2.png";
+import forceUnlock from "./assets/force-unlock.png";
+import forcefullyUnlocked from "./assets/forcefully-unlocked.png";
 
 <GithubRelease version={"5.40.0"} />
 
@@ -27,14 +33,19 @@ For more information and how to migrate your code, please refer to the separate 
 
 ### Updated Webiny To Use React 18 ([#3771](https://github.com/webiny/webiny-js/pull/3771))
 
-With this release, we've updated Webiny to use React 18 (v18.2.0).
-This is a really large codebase update, and it may introduce breaking changes in your project.
+With this release, we've updated Webiny to use React `18.2.0`.
+This was a really large codebase update, and it may introduce breaking changes in your project.
 
-Most notably, we updated the [RMWC](https://github.com/rmwc/rmwc) package from version 8.x to version `14.2.2`, as the version 8 did not work with React 18.
+The biggest dependency update was to the [RMWC](https://github.com/rmwc/rmwc) package from version `8.x` to version `14.2.2`, because that version did not work with the React `18.x`.
+There were a lot of changes from `8.x` to `14.2.2`, so please check the [RMWC changelog](https://github.com/rmwc/rmwc/blob/master/CHANGELOG.md) for more information.
+
+<Alert type="danger">
 
 Please check your project for any issues and update your code accordingly.
 
 If you find any Webiny related issues, please report it on our Slack channel or GitHub repository.
+
+</Alert>
 
 ## Headless CMS
 
@@ -73,6 +84,25 @@ With this release, we are enhancing our Advanced Search Filter Builder adding th
 With the latest update, users now have the option to add reference fields in their search criteria using the easy-to-use Autocomplete input field. This means that users can search for the models that were defined during entry configuration and quickly select the referenced entry that best fits their requirements.
 
 <Image src={hcmsAcfReferenceField} title={"Advanced Search Filter's support for reference fields"} />
+
+### Introducing Record Locking Mechanism ([#4065](https://github.com/webiny/webiny-js/pull/4065))
+
+For our enterprise clients, we are introducing a new feature that allows users to lock entries in the Headless CMS. This feature will prevent multiple users to edit the same entry.
+
+The feature is only a UI feature and does not prevent users to update entries via direct API calls.
+
+When a user starts to edit a record, the record is automatically locked for all other users. The lock is released when the user, editing the record, exits the editor or the lock time out occurs.
+Also, a user can be kicked out from the record by another user with sufficient privileges.
+
+<Image src={lockedScreen1} title={"Locked entry in the list"}/>
+
+<Image src={lockedScreen2} title={"Locked entry when trying to edit it"}/>
+
+<Image src={forceUnlock} title={"Force unlock the entry"}/>
+
+<Image src={forcefullyUnlocked} title={"Forcefully unlocked entry and redirect to the list"}/>
+
+
 
 ## Page Builder
 
