--- a/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
+++ b/docs/developer-docs/5.40.x/file-manager/extending/customize-file-preview.mdx
@@ -69,11 +69,11 @@ export const createExtension = () => {
 };
 ```
 
-With this code in place, the video file will now have a custom preview, both in the file browser (grid view) and in the file details view.
+With this code in place, the video file will now have a custom preview, both in the file browser (grid view) and in the file details panel.
 
 <Image src={fmFilesPreviewsVideo} title="Custom Preview of a Video File - File Browser" />
 
-<Image src={fmFilesPreviewsVideo2} title="Custom Preview of a Video File - File Details" />
+<Image src={fmFilesPreviewsVideo2} title="Custom Preview of a Video File - File Details Panel" />
 
 ## Using Glob Patterns
 
