--- a/docs/release-notes/5.40.0/removed-apis.mdx
+++ b/docs/release-notes/5.40.0/removed-apis.mdx
@@ -16,7 +16,7 @@ In this guide, we'll go through the list of deprecated APIs and their replacemen
 
 ### Removed Methods Related to Checking Security Permissions (Performing Authorization)
 
-We've removed a set of methods related to checking security permissions (pPerforming authorization) that were accessible via the `context.cms.permissions` object. To provide more context, here's an example of how the object could've been used in a simple `CmsGraphQLSchemaPlugin` plugin:
+We've removed a set of methods related to checking security permissions (performing authorization) that were accessible via the `context.cms.permissions` object. To provide more context, here's an example of how the object could've been used in a simple `CmsGraphQLSchemaPlugin` plugin:
 
 ```ts
 import { CmsGraphQLSchemaPlugin } from "@webiny/api-headless-cms";
