fix: record locking timeout

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -87,7 +87,7 @@ With the latest update, users now have the option to add reference fields in the
 
 ### Introducing Record Locking Mechanism ([#4065](https://github.com/webiny/webiny-js/pull/4065))
 
-For our enterprise clients, we are introducing a new feature that allows users to lock entries in the Headless CMS. This feature will prevent multiple users to edit the same entry.
+For our Enterprise clients, we are introducing a new feature that allows users to lock entries in the Headless CMS. This feature will prevent multiple users to edit the same entry.
 
 The feature is only a UI feature and does not prevent users to update entries via direct API calls.
 
@@ -102,6 +102,11 @@ Also, a user can be kicked out from the record by another user with sufficient p
 
 <Image src={forcefullyUnlocked} title={"Forcefully unlocked entry and redirect to the list"}/>
 
+By default, the locking timeout period is 1800 seconds (30 minutes). But if you want to change it, just set the environment variable, with value in seconds:
+```bash
+# .env
+WEBINY_RECORD_LOCK_TIMEOUT=3600
+```
 
 
 ## Page Builder
