fix: remove shadow from image

--- a/docs/developer-docs/5.28.x/core-development-concepts/basics/tools-and-libraries.mdx
+++ b/docs/developer-docs/5.28.x/core-development-concepts/basics/tools-and-libraries.mdx
@@ -5,6 +5,7 @@ description: Learn about different tools and libraries that are included in ever
 ---
 
 import { Alert } from "@/components/Alert";
+import logos from "./assets/tools-libraries/logos.png";
 
 <Alert type="success" title="What you’ll learn">
 
@@ -12,7 +13,7 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-![Tools and Libraries](./assets/tools-libraries/logos.png)
+<Image src={logos} shadow={false} canEnlarge={false}/>
 
 Webiny is an open-source project, and as such, it is also relying on other open-source software and tools, to bring the best possible experience and increase development productivity.
 
