--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -121,17 +121,65 @@ Previously, the functionality was available exclusively within the page details 
 
 ## Other Improvements
 
-### ✍️ Introducing Pulumi v6 ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+### Introducing Extensions ([#4111](https://github.com/webiny/webiny-js/pull/4111)) 
 
-✍️
+In our continuous effort to improve the developer experience, with this release, every Webiny project will now include the new `extensions` folder. As the name suggests, this folder is intended to store all custom extensions, making it easier to manage and maintain them.
 
-### ✍️ allow-local-state-files ([#4119](https://github.com/webiny/webiny-js/pull/4119))
+Notice how the folder was named `extensions` instead of `plugins`. This was done intentionally, because when extending Webiny, different approaches are used. For example, all Admin extensions are made via different config React components. For example, when [customizing file preview](/docs/file-manager/extending/customize-file-preview) in File Manager, the following code is used:
 
-✍️
+```tsx
+<FileManagerViewConfig>
+  {/* Ensures custom preview is applied in file browser (grid view). */}
+  <Browser.Grid.Item.Thumbnail type={"video/quicktime"} element={<VideoQtFileType />} />
+  
+  {/* Ensures custom preview is applied in file details. */}
+  <FileDetails.Preview.Thumbnail type={"video/quicktime"} element={<VideoQtFileType />} />
+</FileManagerViewConfig>
+```
 
-### ✍️ Introducing the `extensions` Folder and the New Extension Scaffold ([#4111](https://github.com/webiny/webiny-js/pull/4111))
+On the other hand, API extensions are done via one or more plugins. For example, when working with lifecycle events in the File Manager, the following code is used:  
 
-✍️
+```ts
+import { createContextPlugin } from "@webiny/api-serverless-cms";
+
+export const customAliasesPlugin = createContextPlugin(context => {
+    context.fileManager.onFileBeforeCreate.subscribe(({ file }) => {
+        // Add custom logic here.
+    });
+});
+```
+
+So, to better reflect this, we've decided to use the `extensions` folder name, which is more generic and can be used for both types of extensions.
+
+Furthermore, in order to make it easier for developers to create new extensions, we've also introduced the **New Extension** scaffold that can be used to quickly create new API and Admin extensions. The scaffold will automatically create the necessary files and folder structure, allowing developers to immediately focus on the actual implementation. 
+
+Ultimately, the goal is to make the extension creation process as seamless as possible, enabling developers to quickly and efficiently extend Webiny to meet their specific requirements. With the new `extensions` folder and the **New Extension** scaffold, we believe we've taken a significant step in that direction.
+
+For more information, please refer to the new [Extensions](/docs/core-development-concepts/basics/extensions) article.
+
+#### Note on Backward Compatibility
+
+In terms of backward compatibility, note that all of the existing customizations will still work as expected. Optionally, you can move your custom extensions to the new `extensions` folder to keep your project organized.
+
+#### Documentation
+
+Note that some of the existing documentation has already been updated to reflect these changes, for example [Customize File Preview](/docs/file-manager/extending/customize-file-preview) or [Customize File Actions](/docs/file-manager/extending/customize-file-actions]) articles. But, there are still articles that we will be updating in the upcoming weeks (users will still be able to follow them in the meantime).
+
+In any case, if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack).
+
+### Introducing Pulumi v6 ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+
+In order to keep up with the latest features and improvements, we've upgraded Pulumi to version 6.
+
+Note that no breaking changes are expected, but if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
+
+For more information on this one, please refer to the separate [Pulumi v6](/docs/release-notes/5.40.0/pulumi-v6) article.
+
+### Preventing Production Deployments with Locally Stored State Files ([#4119](https://github.com/webiny/webiny-js/pull/4119))
+
+We've seen a couple of cases where uses would still use locally stored [Pulumi](/docs/infrastructure/pulumi-iac/iac-with-pulumi) state files with their production environments. This is not recommended, so we've made it a bit harder to do so.
+
+In case a production deployment with locally stored state files is detected, the deployment will fail with an error message. Still, if the user wishes to bypass this check, they can append the new `--allow-local-state-files` flag to the deployment command.
 
 ### Webiny CLI and `create-webiny-project` ([#4045](https://github.com/webiny/webiny-js/pull/4045))
 
@@ -151,7 +199,7 @@ If you still want to see the Pulumi output, you can use the `--deployment-logs` 
 yarn webiny deploy --deployment-logs
 ```
 
-Note that no matter if the `--deployment-logs` flag was passed or not, the Pulumi output will always be shown in case of an error.
+Note that, regardless of the `--deployment-logs` flag, Pulumi output will always be shown in CI environments and in case an error occurs. 
 
 #### Graceful Error Handling
 
