feat: add missing changelog items

--- a/docs/release-notes/5.40.0/changelog.mdx
+++ b/docs/release-notes/5.40.0/changelog.mdx
@@ -20,6 +20,7 @@ import lockedScreen1 from "./assets/locked-1.png";
 import lockedScreen2 from "./assets/locked-2.png";
 import forceUnlock from "./assets/force-unlock.png";
 import forcefullyUnlocked from "./assets/forcefully-unlocked.png";
+import contextPluginFullTypes from "./assets/context-plugin-full-types.png"
 
 <GithubRelease version={"5.40.0"} />
 
@@ -119,7 +120,7 @@ Previously, the functionality was available exclusively within the page details 
 
 <Image src={pbDuplicatePage} title={"Duplicate list and bulk action"} />
 
-## Other Improvements
+## Development
 
 ### Introducing Extensions ([#4111](https://github.com/webiny/webiny-js/pull/4111)) 
 
@@ -167,19 +168,28 @@ Note that some of the existing documentation has already been updated to reflect
 
 In any case, if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack).
 
-### Introducing Pulumi v6 ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+### Introducing `@webiny/api-serverless-cms` Package
 
-In order to keep up with the latest features and improvements, we've upgraded Pulumi to version 6.
+With this release, we've introduced the `@webiny/api-serverless-cms` package, which contains some of the more frequently used plugin factory functions and utilities. At the moment, the package exports the following two plugin factory functions:
 
-Note that no breaking changes are expected, but if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
+1. [`createContextPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-serverless-cms/src/index.ts#L33-L37) - used to create a context plugin
+2. [`createGraphQLSchemaPlugin`](https://github.com/webiny/webiny-js/blob/next/packages/api-serverless-cms/src/index.ts#L39-L43) - used to create a GraphQL schema plugin
 
-For more information on this one, please refer to the separate [Pulumi v6](/docs/release-notes/5.40.0/pulumi-v6) article.
+And although existing plugin factories will still work, the main advantage of using these new functions is that, when interacting with the `context` object, users immediately receive full type definitions:
 
-### Preventing Production Deployments with Locally Stored State Files ([#4119](https://github.com/webiny/webiny-js/pull/4119))
+<Image src={contextPluginFullTypes} title={"Context Object - Full Type Definitions"} />
 
-We've seen a couple of cases where uses would still use locally stored [Pulumi](/docs/infrastructure/pulumi-iac/iac-with-pulumi) state files with their production environments. This is not recommended, so we've made it a bit harder to do so.
+Previously, developers had to type cast the `context` object to get the correct type definitions (using the [`Context`](https://github.com/webiny/webiny-js/blob/next/apps/api/graphql/src/types.ts#L20) interface that was included in every Webiny project).
 
-In case a production deployment with locally stored state files is detected, the deployment will fail with an error message. Still, if the user wishes to bypass this check, they can append the new `--allow-local-state-files` flag to the deployment command.
+Note that the `@webiny/api-serverless-cms` package is still in its early stages, and we plan to add more utilities and plugin factories in the future. But we believe that this is a good starting point, and we hope that it will make the development process easier and more enjoyable.
+
+#### Note on Backward Compatibility
+
+In terms of backward compatibility, note that all of the existing plugins will still work as expected. Optionally, you can replace the existing plugin factories with the new ones to get the full type definitions.
+
+### Documentation
+
+In terms of existing documentation, we've already updated some of the articles to reflect these changes. But, there are still articles that we will be updating in the upcoming weeks (users will still be able to follow them in the meantime).
 
 ### Webiny CLI and `create-webiny-project` ([#4045](https://github.com/webiny/webiny-js/pull/4045))
 
@@ -232,6 +242,24 @@ The [`webiny about`](/docs/core-development-concepts/basics/webiny-cli#yarn-webi
 The [`webiny info`](/docs/core-development-concepts/basics/webiny-cli#yarn-webiny-info-env-env) command has been visually refreshed a bit.
 
 <Image src={refreshedWebinyInfoCommand} title={'Refreshed "webiny info" Command'} />
+
+## Deployments
+
+### Introducing Pulumi v6 ([#4096](https://github.com/webiny/webiny-js/pull/4096))
+
+In order to keep up with the latest features and improvements, we've upgraded Pulumi to version 6.
+
+Note that no breaking changes are expected, but if you encounter any issues, please report them on our [Slack community channel](https://www.webiny.com/slack) or [GitHub repository](https://github.com/webiny/webiny-js/issues).
+
+For more information on this one, please refer to the separate [Pulumi v6](/docs/release-notes/5.40.0/pulumi-v6) article.
+
+### Preventing Production Deployments with Locally Stored State Files ([#4119](https://github.com/webiny/webiny-js/pull/4119))
+
+We've seen a couple of cases where uses would still use locally stored [Pulumi](/docs/infrastructure/pulumi-iac/iac-with-pulumi) state files with their production environments. This is not recommended, so we've made it a bit harder to do so.
+
+In case a production deployment with locally stored state files is detected, the deployment will fail with an error message. Still, if the user wishes to bypass this check, they can append the new `--allow-local-state-files` flag to the deployment command.
+
+## Other Improvements
 
 ### Webiny Control Panel (WCP) Badge In Admin App
 
